--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: bubba-album
 Section: web
 Priority: standard
 Maintainer: Carl Fürstenberg <carl@excito.com>
-Build-Depends: debhelper (>= 5), cdbs, libphp-codeigniter-dev (>= 1.7.1-3)
+Build-Depends: debhelper (>= 7.2), libphp-codeigniter-dev (>= 1.7.1-3)
 Standards-Version: 3.8.0
 Homepage: http://www.excito.com
 
