--- a/debian/rules
+++ b/debian/rules
@@ -1,9 +1,10 @@
 #!/usr/bin/make -f
 
-include /usr/share/cdbs/1/rules/debhelper.mk 
-install/bubba-album::
+%:
+	dh $@
+
+override_dh_install:
+	dh_install
 	install -DT album_database.sql debian/bubba-album/usr/share/dbconfig-common/data/bubba-album/install/mysql
 	install -DT album_database_upgrade1.pl debian/bubba-album/usr/share/dbconfig-common/data/bubba-album/upgrade/scripts/2.0.0.5
-
-binary-post-install/bubba-album::
 	dh_codeigniter --destdir=/usr/share/album -x
