--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,6 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
  mysql-server (>= 5.0) | mysql-server-5.0 | mysql-server-5.1,
  libimage-exiftool-perl,
  perlmagick,
- libfile-type-perl
+ libfile-mimeinfo-perl
 Description: The codeigniter based album public interface
  An public album interface for the Bubba album suite
